feat(operations): add operation icons and update stats section
- Add three new SVG icons (emissions, markets, lineman) for operations stats
- Update stats section grid from 4 to 3 columns with centered alignment
- Remove Morgan Creek Ranch stat
- Add anchor link button in "People Behind the Power" section
- Add id to Operations resources section for anchor navigation
- Update several internal links (ERP, resource planning)
- Refine stat copy for brevity

--- a/operations.htm
+++ b/operations.htm
@@ -73,6 +73,12 @@
 							of the West, from the high plains to the desert southwest, and from the black hills of
 							Wyoming to the peaks of Colorado.
 						</p>
+						<p>
+							<a href="#operations-resources"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
+								Transmission planning & energy markets resources
+							</a>
+						</p>
 					</div>
 				</section>
 
@@ -95,7 +101,7 @@
 									low-cost, emissions-free renewable energy, and a reliable fleet of coal and natural
 									gas
 									power plants. We have 20+ generation facilities in our portfolio with <a
-										href="https://tristate.coop/erp">more on the
+										href="https://tristate.coop/powering-the-future">more on the
 										way</a>.
 									Members also have the option to self-supply a portion of their power needs so they
 									can
@@ -147,22 +153,22 @@
 
 				<!-- Stats -->
 				<section class="px-8 py-16">
-					<div class="grid gap-8 sm:grid-cols-2 xl:grid-cols-4">
+					<div class="grid gap-8 md:grid-cols-3 place-items-center">
 						<!-- Stat 1 -->
-						<div class="text-center space-y-4">
+						<div class="text-center space-y-4 max-w-96">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+								<img src="https://tristate.coop/sites/default/files/images/icons/operations-icon-emissions.svg"
 									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">1,250 MW</p>
-							<p class="text-sm">We're adding 1,250 megawatts of renewables and battery storage between
-								2026 and 2031 to meet system needs and meet emissions goals.</p>
+							<p class="text-sm">We're adding 1,250 megawatts of renewables and battery storage to meet
+								system needs and emissions goals.</p>
 						</div>
 
 						<!-- Stat 2 -->
-						<div class="text-center space-y-4">
-							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+						<div class="text-center space-y-4 max-w-96">
+							<div class="mx-auto size-24 py-2 sm:size-36">
+								<img src="https://tristate.coop/sites/default/files/images/icons/operations-icon-markets.svg"
 									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">24/7/365</p>
@@ -171,20 +177,9 @@
 						</div>
 
 						<!-- Stat 3 -->
-						<div class="text-center space-y-4">
+						<div class="text-center space-y-4 max-w-96">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
-									alt="Icon" class="w-full h-full">
-							</div>
-							<p class="font-semibold text-xl">50,000</p>
-							<p class="text-sm">We make annual improvements to 50,000 acres of Morgan Creek Ranch in
-								Northwest Colorado, including game movement and habitat.</p>
-						</div>
-
-						<!-- Stat 4 -->
-						<div class="text-center space-y-4">
-							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+								<img src="https://tristate.coop/sites/default/files/images/icons/operations-icon-lineman.svg"
 									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">200</p>
@@ -274,7 +269,7 @@
 				<!-- Operations resources -->
 				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
 					<div class="mx-auto max-w-2xl space-y-4">
-						<h2 class="font-serif font-light text-3xl">
+						<h2 id="operations-resources" class="font-serif font-light text-3xl">
 							Operations resources </h2> <!-- Button row -->
 						<div class="flex flex-wrap justify-center gap-4 pt-8">
 							<a href="https://www.oasis.oati.com/tsgt/index.html"
@@ -282,7 +277,7 @@
 								target="_blank">
 								OASIS
 							</a>
-							<a href="https://tristate.coop/erp"
+							<a href="https://tristate.coop/resource-planning"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
 								Electric Resource Plan
 							</a>
