feat(leadership): replace Clifton Karnei with Bryan Davis as CFO
- Update modal photo styling from rounded-3xl to rounded-full
- Add spacing improvements to modal name/title layout

--- a/leadership.htm
+++ b/leadership.htm
@@ -198,30 +198,30 @@
 								</button>
 							</div>
 						</div>
-						<div class="relative p-4 group bg-white" data-card="clifton">
+						<div class="relative p-4 group bg-white" data-card="bryan">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
-									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/clifton-karnei-400x500.jpg"
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/bryan-davis-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
 								</div>
-								<div class="text-xl font-bold mt-6">Clifton Karnei</div>
-								<div class="mb-6">Interim Chief Financial Officer</div>
+								<div class="text-xl font-bold mt-6">Bryan Davis</div>
+								<div class="mb-6">Chief Financial Officer</div>
 								<div class="" data-bio>
 									<div class="">
-										Clifton Karnei joined Tri-State as the Interim CFO in 2025. He previously served
-										as
-										the Executive Vice President and
-										General Manager of Brazos Electric Power Cooperative, Inc., the largest
-										generation
-										and transmission cooperative in Texas
-										until he retired in 2023. Clifton holds a Bachelor of Business Administration in
-										accounting, summa cum laude, from the
-										University of Texas at San Antonio and is a certified public accountant. He has
-										served in leadership roles on the boards
-										of several national energy organizations, including the Electric Reliability
-										Council
-										of Texas (ERCOT), ACES Power
-										Marketing, and the National Renewables Cooperative Organization (NRCO).
+										Bryan joined Tri-State in September 2025, bringing over 20 years of experience
+										with
+										expertise in accounting, financial
+										planning, and utility strategies across multi-state regions. Prior to joining
+										Tri-State,
+										Bryan led financial strategy for a
+										utility operating company serving 1.6 million electric and 1.5 million natural
+										gas
+										customers and previously held roles of
+										increasing responsibility in utility accounting across multiple regions. Bryan
+										holds
+										Bachelor of Science and Master of
+										Accountancy degrees from Brigham Young University and is a certified public
+										accountant.
 									</div>
 								</div>
 								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
@@ -366,10 +366,10 @@
 
 									<div class="width-full aspect-square px-auto max-w-sm">
 										<img data-photo alt=""
-											class="size-full object-cover object-top sm:rounded-3xl" />
+											class="size-full object-cover object-top sm:rounded-full" />
 									</div>
-									<div>
-										<h3 class="text-xl font-bold" data-name></h3>
+									<div class="mt-4">
+										<h3 class="mb-0 text-xl font-bold" data-name></h3>
 										<p class="text-gray-600" data-title></p>
 									</div>
 								</div>
