fix(operations): button text

--- a/operations.htm
+++ b/operations.htm
@@ -279,7 +279,7 @@
 							</a>
 							<a href="https://tristate.coop/resource-planning"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
-								Electric Resource Plan
+								Resource Planning
 							</a>
 							<a href="https://tristate.coop/financials"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
