feat(home): link updates and mic icon added

--- a/home.htm
+++ b/home.htm
@@ -159,7 +159,7 @@
 									renewables—that’s the cooperative difference.
 								</p>
 								<p>
-									<a href="https://tristate.coop/member-list"
+									<a href="https://tristate.coop/members"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 										Our members
 									</a>
@@ -185,7 +185,8 @@
 							<p class="text-sm">
 								Backed by 20 years of data, we've developed our own set of industry-leading reliability
 								metrics to make sure we can serve members' power into the future. Tornadoes, heat waves
-								or blizzards: <a href="https://tristate.coop/erp"
+								or blizzards: <a
+									href="https://tristate.coop/podcast-western-watts-godzilla-meteors-and-reliability-duane-highley-tristate"
 									class="underline hover:text-gray">we're planning for it
 									all</a>.
 							</p>
@@ -203,7 +204,8 @@
 									href="https://tristate.coop/energy-mix" class="underline hover:text-gray">investing
 									in low-cost renewable power</a>,
 								participating in regional power markets to buy and sell power at the best rates, and <a
-									href="https://tristate.coop/energy-mix" class="underline hover:text-gray">as we
+									href="http://tristate.coop/powering-the-future" class="underline hover:text-gray">as
+									we
 									build for the future</a>.
 							</p>
 						</div>
@@ -220,7 +222,7 @@
 									href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
 									class="underline hover:text-gray">we take that seriously</a>. We strive to meet
 								standards set by both the government and our members to <a
-									href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
+									href="https://tristate.coop/podcast-western-snapping-into-compliance"
 									class="underline hover:text-gray">protect ecosystems and communities</a>.
 							</p>
 						</div>
@@ -270,12 +272,15 @@
 								</p>
 								<p>
 									<a href="https://tristate.coop/podcast-western-watts"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline sm:border-white">
+										class="inline-flex items-center gap-2 rounded-full border border-black px-4 py-2 font-normal no-underline sm:border-white">
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full.svg"
+											alt="audio icon" class="h-6 sm:hideme" />
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full-white.svg"
+											alt="audio icon" class="h-6 hideme sm:inline" />
 										<span class="text-black hover:text-black sm:hideme">Podcast episodes and
 											more</span>
 										<span class="text-white hover:text-white hideme sm:inline">Podcast episodes and
 											more</span>
-
 									</a>
 								</p>
 							</div>
