feat(leadership): change Tiffin title

--- a/leadership.htm
+++ b/leadership.htm
@@ -308,7 +308,7 @@
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
 								</div>
 								<div class="text-xl font-bold mt-6">Lisa Tiffin</div>
-								<div class="mb-6">Senior Vice President of Energy Management</div>
+								<div class="mb-6">Chief Commercial Officer</div>
 								<div class="" data-bio>
 									<div class="">
 										Lisa has served in numerous energy management roles since joining Tri-State in
