feat(home): content fixes from JP

--- a/home.htm
+++ b/home.htm
@@ -70,10 +70,9 @@
 
 								</h2>
 								<p>
-									As a wholesale power supplier to our members, <a
-										href="https://tristate.coop/member-list"> of
-										electric utilities across rural Colorado, Nebraska, New
-										Mexico and Wyoming</a>, we have a fleet of electric resources.
+									As a wholesale power supplier to our members, of
+									electric utilities across rural Colorado, Nebraska, New
+									Mexico and Wyoming, we have a fleet of electric resources.
 									They include natural gas, wind and solar facilities. We also
 									own and operate nearly 6,000 miles of transmission line to
 									move that power.
@@ -155,7 +154,7 @@
 									answer to our neighbors. Each electric utility in our
 									association has a locally-elected representative with a vote
 									and seat on Tri-State’s board. We work together—from
-									supporting each other in times of need to low-cost utilityscale
+									supporting each other in times of need to low-cost utility scale
 									renewables—that’s the cooperative difference.
 								</p>
 								<p>
