feat(weatherization): v1 of dialog form

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Battery Resource</title>
+	<title>Weatherization</title>
 	<style>
 		body {
 			max-width: 1200px;
@@ -22,8 +22,6 @@
 
 	<link rel="stylesheet" href="assets/css/build.css" />
 
-
-
 </head>
 
 <body>
@@ -33,12 +31,203 @@
 			<div class="l-constrain--no-padding">
 
 
-				<!-- SECTIONS GO HERE -->
+				<!-- Full Width Hero -->
+				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
+					<!-- Background Image -->
+					<img src="https://placehold.co/1600x500?text=Weatherization+Hero" alt="Weatherization Hero"
+						class="absolute inset-0 w-full h-full object-cover z-0" />
 
+					<!-- Content Overlay -->
+					<div
+						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
+						<h1 class="text-4xl md:text-5xl font-serif text-balance">
+							Energy Efficiency Through Weatherization
+						</h1>
+					</div>
+				</section>
+
+				<!-- Two Column Section: Text + Image -->
+				<section class="grid sm:grid-cols-2">
+					<!-- Text Column -->
+					<div class="h-full">
+						<div class="px-8 py-12 sm:text-left text-center flex items-center h-full">
+							<div class="space-y-4 max-w-md mx-auto">
+								<h2 class="font-serif font-light text-3xl text-balance">
+									What is Weatherization?
+								</h2>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+									incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+									exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+								</p>
+								<p>
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+									fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+									qui officia deserunt mollit anim id est laborum.
+								</p>
+
+								<!-- Optional CTA Button -->
+								<p>
+									<a href="#"
+										class="inline-block rounded-full border border-black text-black px-4 py-2 font-normal no-underline transition-transform hover:text-gray"
+										data-form-link>
+										Learn More
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<!-- Image Column -->
+					<div class="h-full">
+						<div class="relative aspect-video sm:aspect-auto sm:h-full">
+							<img src="https://placehold.co/600x600?text=Weatherization+Image"
+								alt="Weatherization Services" class="absolute inset-0 w-full h-full object-cover" />
+						</div>
+					</div>
+				</section>
+
+				<!-- Two Column Section: Image + Text (Reversed) -->
+				<section class="grid sm:grid-cols-2">
+					<!-- Image Column -->
+					<div class="h-full sm:order-2">
+						<div class="relative aspect-video sm:aspect-auto sm:h-full">
+							<img src="https://placehold.co/600x600?text=Benefits+Image" alt="Weatherization Benefits"
+								class="absolute inset-0 w-full h-full object-cover" />
+						</div>
+					</div>
+
+					<!-- Text Column with Background -->
+					<div class="h-full sm:order-1">
+						<div class="bg-navy text-white px-8 py-12 sm:text-left text-center flex items-center h-full">
+							<div class="space-y-4 max-w-md mx-auto">
+								<h2 class="font-serif font-light text-3xl text-balance">
+									The Benefits
+								</h2>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+									incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+									exercitation ullamco laboris.
+								</p>
+								<ul class="list-disc list-inside space-y-2">
+									<li>Reduced energy costs</li>
+									<li>Improved home comfort</li>
+									<li>Environmental benefits</li>
+									<li>Increased property value</li>
+								</ul>
+
+								<!-- Optional CTA Button -->
+								<p>
+									<a href="#"
+										class="inline-block rounded-full border border-white text-white px-4 py-2 font-normal no-underline transition-transform hover:text-gray">
+										Get Started
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
+					<div class="mx-auto max-w-2xl space-y-4">
+						<h2 class="font-serif font-light text-3xl">
+							Ensuring reliability into the future
+						</h2>
+						<p>
+							Tri-State and our members are building an electric system for the future that maintains
+							reliability and enhances
+							resilience at competitive rates for our membership. As part of Tri-State’s ongoing system
+							planning processes, we perform
+							detailed modeling to identify the types and locations of new resources that will advance our
+							mission to serve our
+							members a reliable, affordable and responsible supply of electricity.
+
+						</p>
+						<h2 class="font-serif font-light text-3xl pt-10">Voice your support for Tri-State’s plan to
+							ensure
+							reliable, responsible power</h2>
+						<p>
+							We all know how reliable power is critical to our rural way of life. Tri-State has filed a
+							preferred portfolio with the
+							Colorado Public Utilities Commission (Commission) that preserves reliability at the least
+							cost,
+							while increasing
+							renewable energy supply and decreasing emissions.
+
+						</p>
+						<p>Tri-State’s preferred portfolio, which we have asked the Commission to approve, is central to
+							delivering a responsible
+							electricity system for the future. Our preferred portfolio presents the least-cost mix of
+							diverse resources, including
+							new wind and solar power projects, our first battery storage systems, and a new natural gas
+							power plant with
+							hydrogen-blend capability, to reliably serve growing rural energy needs. Our planning
+							demonstrates that we will always
+							have the power our members need, even during extreme weather events, and meet all emissions
+							reduction and renewable
+							energy requirements.</p>
+						<p>You can easily share your support through the Colorado Public Utilities Commission. Full
+							instructions below.</p>
+						<div class="flex flex-row justify-center gap-4">
+							<a href="https://tristate.coop/sites/default/files/PDF/resources/CalltoAction%20on%20Tri-State%20Preferred%20Plan.pdf"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
+								target="_blank" rel="noopener">
+								Instructions
+							</a>
+							<a href="https://www.dora.state.co.us/pls/efi/EFI_COMMENT_GUI.Electric"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
+								target="_blank" rel="noopener">
+								File Comment Here
+							</a>
+						</div>
+					</div>
+				</section>
 
 			</div>
 		</div>
 	</main>
-</body>
 
-</html>
+	<!-- Form Dialog -->
+	<dialog id="formDialog"
+		class="animate-slide-in border-0 rounded-lg shadow-lg p-0 max-w-3xl w-11/12 h-[calc(100vh-2rem)] overflow-hidden backdrop:animate-fade-in backdrop:bg-black/50 backdrop:backdrop-blur-md">
+		<div class="relative h-full flex flex-col pt-12 lg:pt-0">
+			<button
+				class="modal-close absolute top-2 right-2 z-10 cursor-pointer text-gray-600 bg-gray-dark text-white hover:text-black text-2xl font-bold leading-none border-0 bg-none p-0 w-8 h-8 flex items-center justify-center"
+				aria-label="Close dialog">&times;</button>
+			<div id="iframeContainer" class="flex-1 m-0">
+				<iframe id="formIframe" allowfullscreen="" frameborder="0" marginheight="0" marginwidth="0"
+					mozallowfullscreen="" msallowfullscreen=""
+					src="https://forms.office.com/Pages/ResponsePage.aspx?id=sPK0CYIJwk68Nk3iEP3DztUY5wrBxztMlsn3aKS5W6NUNlQ2WTlFOEg3MklBUDhJMFpEU0lNRUY2OS4u&amp;embed=true"
+					webkitallowfullscreen="" class="h-full w-full border-0">
+				</iframe>
+			</div>
+		</div>
+	</dialog>
+
+	<script>
+		// Dialog functionality
+		const dialog = document.getElementById('formDialog');
+		const closeButton = document.querySelector('.modal-close');
+		const formLinks = document.querySelectorAll('[data-form-link]');
+
+		// Open dialog when clicking data-form-link buttons
+		formLinks.forEach(link => {
+			link.addEventListener('click', (e) => {
+				e.preventDefault();
+				dialog.showModal();
+			});
+		});
+
+		// Close dialog when clicking the close button
+		closeButton.addEventListener('click', () => {
+			dialog.close();
+		});
+
+		// Close dialog when clicking outside (on the backdrop)
+		dialog.addEventListener('click', (e) => {
+			if (e.target === dialog) {
+				dialog.close();
+			}
+		});
+
+		// Close dialog with Escape key (handled automatically by dialog)
+	</script>
