--- a/weatherization.htm
+++ b/weatherization.htm
@@ -130,53 +130,39 @@
 				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<h2 class="font-serif font-light text-3xl">
-							Ensuring reliability into the future
+							Lorem Ipsum Dolor Sit Amet
 						</h2>
 						<p>
-							Tri-State and our members are building an electric system for the future that maintains
-							reliability and enhances
-							resilience at competitive rates for our membership. As part of Tri-State’s ongoing system
-							planning processes, we perform
-							detailed modeling to identify the types and locations of new resources that will advance our
-							mission to serve our
-							members a reliable, affordable and responsible supply of electricity.
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
+							labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+							laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+							voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
 						</p>
-						<h2 class="font-serif font-light text-3xl pt-10">Voice your support for Tri-State’s plan to
-							ensure
-							reliable, responsible power</h2>
+						<h2 class="font-serif font-light text-3xl pt-10">
+							Consectetur Adipiscing Elit Sed
+						</h2>
 						<p>
-							We all know how reliable power is critical to our rural way of life. Tri-State has filed a
-							preferred portfolio with the
-							Colorado Public Utilities Commission (Commission) that preserves reliability at the least
-							cost,
-							while increasing
-							renewable energy supply and decreasing emissions.
+							Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+							anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+							accusantium doloremque laudantium.
 
 						</p>
-						<p>Tri-State’s preferred portfolio, which we have asked the Commission to approve, is central to
-							delivering a responsible
-							electricity system for the future. Our preferred portfolio presents the least-cost mix of
-							diverse resources, including
-							new wind and solar power projects, our first battery storage systems, and a new natural gas
-							power plant with
-							hydrogen-blend capability, to reliably serve growing rural energy needs. Our planning
-							demonstrates that we will always
-							have the power our members need, even during extreme weather events, and meet all emissions
-							reduction and renewable
-							energy requirements.</p>
-						<p>You can easily share your support through the Colorado Public Utilities Commission. Full
-							instructions below.</p>
+						<p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+							vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+							aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+						</p>
+						<p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+							sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
+							voluptatem.</p>
 						<div class="flex flex-row justify-center gap-4">
-							<a href="https://tristate.coop/sites/default/files/PDF/resources/CalltoAction%20on%20Tri-State%20Preferred%20Plan.pdf"
-								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
-								target="_blank" rel="noopener">
-								Instructions
+							<a href="#"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black">
+								Lorem Ipsum
 							</a>
-							<a href="https://www.dora.state.co.us/pls/efi/EFI_COMMENT_GUI.Electric"
-								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
-								target="_blank" rel="noopener">
-								File Comment Here
+							<a href="#"
+								class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black">
+								Dolor Sit
 							</a>
 						</div>
 					</div>
