--- a/weatherization.htm
+++ b/weatherization.htm
@@ -71,7 +71,7 @@
 									<a href="#"
 										class="inline-block rounded-full border border-black text-black px-4 py-2 font-normal no-underline transition-transform hover:text-gray"
 										data-open-dialog>
-										Learn More
+										Get Started
 									</a>
 								</p>
 							</div>
