--- a/obr.htm
+++ b/obr.htm
@@ -352,7 +352,9 @@
 					class="underline text-blue-700">https://energyoffice.colorado.gov/weatherization-assistance-program</a>.
 			</p>
 			<p>
-				Below is a table to help you check if you qualify based on your household size.*
+				Below is a table to help you check if you qualify based on your household size.* If your annual income
+				is below the
+				amount listed, you likely qualify.
 			</p>
 			<!-- Mobile Table -->
 			<table class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme">
