fix(weatherization): typo in Beulah, CO

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -304,7 +304,7 @@
 					<figure>
 						<img
 							src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/SIEAVegMgmt_web.jpg" />
-						<figcaption class="text-balance">San Isabel Electric employees trim trees in Buelah, CO
+						<figcaption class="text-balance">San Isabel Electric employees trim trees in Beulah, CO
 						</figcaption>
 					</figure>
 				</div>
