fix(home): missing content

--- a/home.htm
+++ b/home.htm
@@ -116,8 +116,8 @@
 						<div class="space-y-2">
 							<p class="font-serif text-3xl font-light sm:text-4xl">50+</p>
 							<p>
-								years in operation. Together with our
-								members, we’ve been serving th
+								years in operation. Together with our members, we’ve been serving the rural West since
+								1952.
 							</p>
 						</div>
 
