feat(home): full width slider and height adjustment

--- a/home.htm
+++ b/home.htm
@@ -295,9 +295,8 @@
 				</style>
 				<section class="min-h-96 sm:min-h-[400px] bg-gray slider-background" style="max-width: 100vw;">
 					<!-- Slider main container -->
-					<div class="xl:max-w-[1200px] xl:mx-auto">
-
-						<div class="swiper h-[400px]">
+					<div class="">
+						<div class="swiper h-[400px] xl:h-[33vw] xl:max-h-[550px]">
 							<!-- Additional required wrapper -->
 							<div class="swiper-wrapper"><!-- Slides -->
 								<div class="swiper-slide aspect-video sm:w-2/3">
@@ -326,9 +325,9 @@
 											class="absolute bottom-0 right-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top z-0"
 											style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px); transform: rotate(180deg) translate(0%, -25%)"></span>
 										<figure
-											class="grid place-content-center p-6 relative z-10 min-h-[400px] lg:px-12">
+											class="grid place-content-center p-6 relative z-10 min-h-[400px] max-w-xl lg:px-12">
 											<blockquote
-												class="m-0 p-0 border-0  font-bold text-justify  text-gray-900 lg:text-lg lg:leading-tight">
+												class="m-0 p-0 border-0  font-bold text-justify  text-gray-900 lg:text-xl lg:leading-tight xl:text-2xl">
 												Together, we can serve growth, reduce risks and
 												hedge against tightening energy markets to benefit
 												our members and the communities they serve across
